--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,6 @@ orbs:
   # aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
 jobs:
-  myjob1:  # Choose any name, such as `build`
-      # The primary container, where your job's commands will run
-      docker:
-        - image:  circleci/node:10.16.3
-      steps:
-        - checkout # check out the code in the project directory
-        - run: echo "hello world" # run the `echo` command
   create_infrastructure: 
       docker:
         - image: amazon/aws-cli
@@ -25,9 +18,28 @@ jobs:
                 --template-file template.yml \
                 --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
                 --region us-east-1
+  # Exercise: Config and Deployment
+  configure_infrastructure: 
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+              # You can get this ID in the section where you registered the SSH Key
+              fingerprints: ["b5:fc:23:47:16:7a:c1:65:9b:92:0b:b0:d1:6d:24:9e"] 
+      - run:
+          name: Install dependencies
+          command: |
+            # install the dependencies needed for your playbook
+            apk add --update ansible 
+      - run:
+          name: Configure server
+          command: |
+            ansible-playbook -i inventory.txt main4.yml
 # Sequential workflow
 workflows:
   # Name the workflow
   myWorkflow:
     jobs:
+      - configure_infrastructure
       - create_infrastructure
