--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook -i inventory main-remote.yml
+             ansible-playbook main-remote.yml -i inventory 
 #test
 # Sequential workflow
 workflows:
