--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,4 +43,4 @@ workflows:
   myWorkflow:
     jobs:
       - configure_infrastructure
-      - create_infrastructure
+     #- create_infrastructure
