--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,5 +42,5 @@ workflows:
   # Name the workflow
   myWorkflow:
     jobs:
-      - configure_infrastructure
-     #- create_infrastructure
+      #- configure_infrastructure
+     - create_infrastructure
