--- a/main-remote.yml
+++ b/main-remote.yml
@@ -2,7 +2,7 @@
  - name: Exercise for setting up a web server in an EC 
    # hosts: ubuntu
    # Use the public IP if the VM is already created
-   hosts: all
+   hosts: 35.175.173.90
    user: ubuntu
    become: true
    become_method: sudo
