--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-             ansible-playbook -i inventory main-remote.yml  
+             ansible-playbook -i inventory main-remote.yml  --private-key ubuntoKey.pem
 #test
 # Sequential workflow
 workflows:
