--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-             ansible-playbook main-remote.yml -i inventory --private-key ubuntoKey.pem
+             ansible-playbook main-remote.yml -i inventory 
 
 #test
 # Sequential workflow
