--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
   # Exercise: Config and Deployment
   configure_infrastructure: 
     docker:
-      - image: python:3.10-alpine3.14
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
       - add_ssh_keys:
@@ -32,11 +32,7 @@ jobs:
           name: Install dependencies
           command: |
             # install the dependencies needed for your playbook
-            apk add--no-cache aws-cli
-            pip install --upgrade pip
-            python3 -m pip install ansible
-            ansible --version
-            apk add openssh-client
+            apk add --update ansible 
       - run:
           name: Configure server
           command: |
