--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,12 +37,29 @@ jobs:
           name: Configure server
           command: |
              ansible-playbook main-remote.yml -i inventory 
-
+  # Exercise: Smoke Testing
+  smoke_test:
+    docker:
+      - image: alpine:latest
+    steps:
+      - run: apk add --update curl
+      - run:
+          name: smoke test
+          command: |
+            URL="https://blog.udacity.com/"
+            # Test if website exists
+            if curl -s --head ${URL} 
+            then
+              return 0
+            else
+              return 1
+            fi
 #test
 # Sequential workflow
 workflows:
   # Name the workflow
   myWorkflow:
     jobs:
-      - configure_infrastructure
+     - smoke_test
+     #- configure_infrastructure
      #- create_infrastructure
