--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,17 @@ orbs:
   # welcome: circleci/welcome-orb@0.4.1
   # aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
+commands:
+   # Exercise - Rollback
+   destroy_environment:
+     steps:
+       - run:
+           name: Destroy environment
+           # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
+           # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
+           when: on_fail
+           command: |
+             aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
 jobs:
   create_infrastructure: 
       docker:
@@ -38,6 +49,15 @@ jobs:
           command: |
              ansible-playbook main-remote.yml -i inventory 
   # Exercise: Smoke Testing
+  smoke_test_destroy:
+    docker:
+      - image: alpine:latest
+    steps:
+      - run:
+          name: Test job
+          # Fail the job intentionally to simulate an error.
+          command:  return 1
+      - destroy_environment  
   smoke_test:
     docker:
       - image: alpine:latest
@@ -60,6 +80,7 @@ workflows:
   # Name the workflow
   myWorkflow:
     jobs:
-     - smoke_test
+     #- smoke_test
      #- configure_infrastructure
-     #- create_infrastructure
+     - create_infrastructure
+     - smoke_test_destroy
