--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,22 @@ jobs:
             else
               return 1
             fi
+  # Executes the bucket.yml - Deploy an S3 bucket, and interface with that bucket to synchronize the files between local and the bucket.
+  # Note that the `--parameter-overrides` let you specify a value that override parameter value in the bucket.yml template file.
+  create_and_deploy_front_end:
+    docker:
+    - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Execute bucket.yml - Create Cloudformation Stack
+          command: |
+              aws cloudformation deploy \
+              --template-file bucket.yml \
+              --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:5} \
+              --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:5}"
+      # Uncomment the step below if yoou wish to upload all contents of the current directory to the S3 bucket
+      - run: aws s3 sync . s3://mybucket-${CIRCLE_WORKFLOW_ID:0:5} --delete
 #test
 # Sequential workflow
 workflows:
@@ -79,4 +95,5 @@ workflows:
     jobs:
      #- smoke_test
      #- configure_infrastructure
-     - create_infrastructure 
+     #- create_infrastructure 
+     - create_and_deploy_front_end
